--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Temporary Items
 /AppClubhouse/AppClubhouse-ejb/dist/
 /AppClubhouse/dist/
 /AppClubhouse/build/
+/AppClubhouse-ejb/nbproject/private/
