--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ Temporary Items
 /AppClubhouse-ejb/nbproject/private/
 /CMS-RemoteInterface/build/
 /CMS-RemoteInterface/dist/
+/AppRemoteInterface/nbproject/private/
+/AppRemoteInterface/build/
+/AppRemoteInterface/dist/
+/Clubhouse/nbproject/private/
+/Clubhouse/build/
+/Clubhouse/dist/
