--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ Temporary Items
 /AppClubhouse/Clubhouse-ejb/nbproject/private/
 /AppClubhouse/Clubhouse-ejb/build/
 /AppClubhouse/Clubhouse-ejb/dist/
+/WebApplication1/nbproject/private/
+/WebApplication1/build/
+/WebApplication1/dist/
